--- a/test_data/simsetting.yml
+++ b/test_data/simsetting.yml
@@ -1,26 +1,25 @@
 log_levels:
-  agent: 0 
-  link: 0 
+  agent: 0
   camp: 0
-  conflict: 0 
   init: 0
-  granularity: location 
-spawn_rules:
-  take_from_population: False
-  insert_day0: True
-move_rules:
-  max_move_speed: 360.0
-  max_walk_speed: 35.0
-  foreign_weight: 1.0
-  camp_weight: 1.0
-  conflict_weight: 0.25
-  conflict_movechance: 1.0
-  camp_movechance: 0.001
-  default_movechance: 0.3
-  awareness_level: 1
-  capacity_scaling: 1.0
-  avoid_short_stints: False
-  start_on_foot: False
-  weight_power: 1.0
+  flood: 0
+  link: 0
+
+# Set to 100 to scale down the population by 100 and increase the execution time.
 optimisations:
   hasten: 1
+
+spawn_rules:
+  flood_driven_spawning: False
+  flood_zone_spawning_only: False
+  conflict_zone_spawning_only: True
+  take_from_population: True
+  flood_driven_spawning:
+    flood_spawn_mode: "pop_ratio"
+    displaced_per_flood_day: [0.0,0.1,0.2,0.5,0.9]
+
+move_rules:
+  max_flood_level: 4
+  flood_rules:
+    flood_movechances: [0.3,0.4,0.7,1.0,1.0]
+    flood_loc_weights: [1.0,0.5,0.2,0.0,0.0]
